k3s/apps/jellyfin/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        securityContext:
          privileged: true
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
          mountPropagation: Bidirectional
      - name: rclone
        image: rclone/rclone:latest
        command: ["/bin/sh", "-c"]
        args:
        - |
          mkdir -p /config/rclone && \
          rclone mount drive:Server_Media /media \
          --config /config/rclone/rclone.conf \
          --allow-other \
          --allow-non-empty \
          --vfs-cache-mode=writes \
          --daemon \
          -vv
        securityContext:
          privileged: true
          capabilities:
            add:
            - SYS_ADMIN
        volumeMounts:
        - name: media
          mountPath: /media
          mountPropagation: Bidirectional
        - name: dev-fuse
          mountPath: /dev/fuse
        - name: rclone-config
          readOnly: true
          mountPath: /config/rclone/rclone.conf
          subPath: rclone.conf
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        emptyDir: {}
      - name: dev-fuse
        hostPath:
          path: /dev/fuse
      - name: rclone-config
        secret:
          secretName: rclone-config
