k3s/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: 8096
  type: NodePort
